fix(Ajustando layout da listagem de dados do grafico)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="field">
                 <label for="eficiencia_estimada">Eficiencia estimada (ηib) 
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Valor de eficiencia estimada da bomba. Entre 0 e 1</div>
                     </div>
                 </label>
@@ -44,7 +44,7 @@
             <div class="field">
                 <label for="coeficiente_vazao_bomba">Coeficiente de vazão da bomba - (q)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -60,7 +60,7 @@
             <div class="field">
                 <label for="coeficiente_altura_bomba">Coeficiente de altura da bomba - (h)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -76,7 +76,7 @@
             <div class="field">
                 <label for="fluxo_bomba_m3s">Fluxo da bomba - Qb(m³/s)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -92,7 +92,7 @@
             <div class="field">
                 <label for="fluxo_bomba_m3h">Fluxo da bomba - Qb(m³/h)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -107,7 +107,7 @@
             <div class="field">
                 <label for="altura_bomba">Altura da bomba - Hb(m)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -123,7 +123,7 @@
             <div class="field">
                 <label for="rotacao_bomba_rpm">Rotação da bomba - N(rpm)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Fornecido pelo fabricante da bomba</div>
                     </div>
                 </label>
@@ -132,7 +132,7 @@
             <div class="field">
                 <label for="rotacao_bomba_rps">Rotação da bomba - N(rps)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -148,7 +148,7 @@
             <div class="field">
                 <label for="diametro_bomba">Diamentro da bomba - D(m)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Fornecido pelo fabricante da bomba</div>
                     </div>
                 </label>
@@ -161,7 +161,7 @@
             <div class="field">
                 <label for="velocidade_especifica_rps">Velocidade específica - Ns(rps)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
@@ -177,7 +177,7 @@
             <div class="field">
                 <label for="velocidade_especifica_rad">Velocidade específica - Ns(rad/s)
                     <div class="icon-container">
-                        <div class="icon"></div>
+                        <div class="icon info"></div>
                         <div class="tooltip">Definido por: 
                             <math>
                                 <mfrac>
