--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
     </section>
     <footer>
-        <a href="https://github.com/filipetorresbr"><span>Desenvolvido por Filipe Torres</span></a>
+        <a target="_blank" href="https://github.com/filipetorresbr"><span>Desenvolvido por Filipe Torres</span></a>
     </footer>
 </body>
 <script>
